Install 'shntool' as part of the headphones pre-reqs

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: 'Install a few pre-requisite packages'
+  apt:
+    name: "{{ item }}"
+    state: 'installed'
+  with_items:
+    - 'shntool'
+
 - name: 'Create the user that the headphones daemon will run as'
   user:
     name: "{{ headphones_daemon_user }}"
